<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginHorizontal="16dp"
        tools:context=".features.login.LoginFragment">

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp"
        tools:context=".features.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >
            <com.openet.greenhup.customviews.CustomeFontTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    app:custom_font="@string/font_name_sfpro_display_bold"
                    />


        </LinearLayout>


        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/brown_grey"
                android:textSize="14sp"
                android:layout_marginTop="2dp"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />

        <com.openet.greenhup.customviews.CustomEditTextView
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />

        <com.openet.greenhup.customviews.CustomEditTextView
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                app:custom_font="@string/font_name_sfpro_display_regular"
                />


        <com.openet.greenhup.customviews.CustomeMaterialButtonFont
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:custom_font="@string/font_name_hkgrotesk_bold"
                app:backgroundTint="@color/mossy_green"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:cornerRadius="6dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                />

    </LinearLayout>


</androidx.cardview.widget.CardView>

    <RelativeLayout
            android:id="@+id/lout_loading_interval_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            >
    </RelativeLayout>

</RelativeLayout>