<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.on_boarding.OnBoardingSlideScreenFragment">


    <ImageView
            android:id="@+id/im_board"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/on_boarding_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.openet.greenhup.customviews.CustomeFontTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:custom_font="@string/font_muli_bold"
            android:textColor="@color/hunter_green"
            android:text="@string/watering_without_worry"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/im_board" />

    <com.openet.greenhup.customviews.CustomeFontTextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/hunter_green"
            app:custom_font="@string/font_muli"
            android:text="@string/you_can_set_your_schedule_watering_plant_properly_and_can_exchange_schedule_automatically_if_come_a_bad_climate"
            android:lineSpacingExtra="7sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />
</androidx.constraintlayout.widget.ConstraintLayout>