<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.contact_us.ContactUsActivity">


    <com.openet.greenhup.customviews.CustomeFontTextView
            android:id="@+id/customeFontTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:custom_font="@string/font_name_hkgrotesk_bold"
            android:textColor="@color/black"
            android:text="@string/contact_us"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arcLayout" />

    <com.github.florent37.arclayout.ArcLayout
            android:id="@+id/arcLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:elevation="5dp"
            app:arc_cropDirection="cropOutside"
            app:arc_height="50dp"
            app:arc_position="bottom"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/very_light_pink"
                android:scaleType="centerCrop"
                android:gravity="center_horizontal"
                >

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

        </LinearLayout>


    </com.github.florent37.arclayout.ArcLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customeFontTextView"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            >

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_bold"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:text="@string/address"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_regular"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:layout_marginTop="8dp"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_bold"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:text="@string/phone"
                android:layout_marginTop="16dp"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_regular"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:layout_marginTop="8dp"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_bold"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:text="@string/email"
                android:layout_marginTop="16dp"
                />

        <com.openet.greenhup.customviews.CustomeFontTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:custom_font="@string/font_name_sfpro_display_regular"
                android:textColor="@color/brownish_grey_two"
                android:textSize="13sp"
                android:layout_marginTop="8dp"
                />

        <ImageView
                android:id="@+id/im_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                />


        <com.openet.greenhup.customviews.CustomeMaterialButtonFont
                android:id="@+id/btn_show_location"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:custom_font="@string/font_name_hkgrotesk_bold"
                app:backgroundTint="@color/mossy_green"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:cornerRadius="6dp"
                android:text="@string/show_location_on_map"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_baseline_map_24"
                app:iconGravity="textStart"
                />

    </LinearLayout>

    <RelativeLayout
            android:id="@+id/lout_loading_interval_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/arcLayout">

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>